# hinge-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  committed.toml  deny.toml  prek.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/api/: index.html  openapi.json  versions.json
hooks/: pre-commit.sh  pre-push.sh
openapi/: hinge-api.openapi.json
scripts/: build-pages.sh  validate.sh
src/: api.rs  client.rs  enums.rs  errors.rs  lib.rs  logging.rs  models.rs  prompts_manager.rs  settings.rs  storage.rs  ws.rs
src/api/: auth.rs  chat.rs  client.rs  connections.rs  likes.rs  persistence.rs  profiles.rs  prompts.rs  ratings.rs  raw.rs  recommendations.rs  settings.rs
src/client/: auth.rs  chat.rs  connections.rs  likes.rs  payload.rs  persistence.rs  profiles.rs  prompts.rs  ratings.rs  raw.rs  recommendations.rs  render.rs  sendbird.rs  serde_helpers.rs  settings.rs  transport.rs
xtask/: Cargo.toml
xtask/src/: main.rs
