[package]
name = "hinge-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Unofficial typed Hinge API client for Rust, with REST, Sendbird chat, and generated OpenAPI docs."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/f0rr0/hinge-rs"
homepage = "https://f0rr0.github.io/hinge-rs/"
documentation = "https://docs.rs/hinge-rs"
keywords = ["hinge", "api", "sendbird", "client", "async"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]
include = [
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "CHANGELOG.md",
  "LICENSE-*",
  "src/**",
  "openapi/hinge-api.openapi.json",
  "docs/api/openapi.json",
  "docs/api/index.html",
  "docs/api/versions.json",
]

[package.metadata.docs.rs]
all-features = true

[workspace]

[features]
default = ["rustls"]
rustls = ["reqwest/rustls", "tokio-tungstenite/rustls-tls-webpki-roots"]
native-tls = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]
json-schema = ["dep:schemars"]
openapi = ["json-schema"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
log = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "gzip", "brotli", "deflate", "http2"] }
schemars = { version = "1.2", features = ["chrono04", "uuid1"], optional = true }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
thiserror = "2.0"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "handshake"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
