[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
publish = false

[workspace]

[dependencies]
hinge-rs = { path = "..", default-features = false, features = ["json-schema"] }
schemars = { version = "1.2", features = ["chrono04", "uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
